func of editing content
