# backend/docs/swagger.json
@@ -45,6 +45,42 @@
                 "responses": {}
             }
         },
+        "/discuss/comments/edit": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "discussions"
+                ],
+                "summary": "Update comment",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id of comment",
+                        "name": "comment_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "New content field",
+                        "name": "content",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/discuss/discussions": {
             "post": {
                 "security": [
@@ -82,6 +118,42 @@
                 "responses": {}
             }
         },
+        "/discuss/discussions/edit": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "discussions"
+                ],
+                "summary": "Update discussion",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id of discussion",
+                        "name": "discussion_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "New content field",
+                        "name": "content",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/discuss/vote": {
             "post": {
                 "security": [
@@ -109,6 +181,10 @@
                         "required": true
                     },
                     {
+                        "enum": [
+                            "like",
+                            "dislike"
+                        ],
                         "type": "string",
                         "description": "The type of vote. Can be either 'like' or 'dislike'.",
                         "name": "vote",
